@@ -1,3 +1,8 @@
+2014-11-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* tweetentry.py (TwitterEntities.convert): Added support for
+	  Twitter extended entities (multiple images on a Twitter entry).
+
 2014-11-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* ast.po: Added new Asturian translation.  Thanks Ḷḷumex03!
